--- a/sass/main.scss
+++ b/sass/main.scss
@@ -91,6 +91,7 @@ section, div, img, body, *{
       line-height: 23px;
       text-align: center;
       color: #2F4F4F;
+      font-weight: bold;
     }
 
     &--extra {
